fix page wrapper (we use default webkit overflow touch)

--- a/css/structure/_umobi.page.sass
+++ b/css/structure/_umobi.page.sass
@@ -1,12 +1,13 @@
 .ui-page
+  display: none
+  border: 0
+
+.ui-fixed-page
   top: 0
   left: 0
   right: 0
-  // width: 100%
   min-height: 100%
   position: absolute
-  display: none
-  border: 0
 
 .ui-page.ui-page-active
   display: block
